--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,16 +40,12 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.2
   camera: ^0.10.0+4
-  google_ml_kit: ^0.13.0
-  google_mlkit_text_recognition: ^0.5.0
-  google_mlkit_image_labeling: ^0.5.0
   advance_pdf_viewer: ^2.0.1
   document_scanner_flutter: ^0.2.3
   cloud_firestore: ^4.1.0
-  google_mlkit_commons: ^0.2.0
-#  firebase_core: ^2.3.0
-#  firebase_auth: ^4.1.3
-#  cloud_functions: ^4.0.5
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  cloud_functions: ^4.0.5
 
 dev_dependencies:
   flutter_test:
